tests/baselines/reference/moduleAugmentationGlobal7_1.errors.txt
moduleAugmentationGlobal7_1.ts(2,5): error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
moduleAugmentationGlobal7_1.ts(2,5): error TS2670: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.


==== moduleAugmentationGlobal7_1.ts (2 errors) ====
    namespace A {
        global {
        ~~~~~~
!!! error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
        ~~~~~~
!!! error TS2670: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.
            interface Array<T> { x }
        }
    }